@@ -1,5 +1,6 @@
 # Head
 
+- Partially implemented the TEXT() function (for '0%' format only at this stage)
 - Can now replace INDIRECT() functions where they argument is an error
 - Inlining now copes with references to missing worksheets
 - Implement the PV() function in ruby and C
